--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -1,6 +1,6 @@
-flask
-pillow
-numpy
-joblib
-flask_cors
+Flask==2.0.2
+Pillow==8.3.2
+numpy==1.21.2
+joblib==1.0.1
+flask-cors==3.0.10
 scikit-learn
